finalização da página contatos

--- a/produtos.html
+++ b/produtos.html
@@ -95,7 +95,7 @@
 
       <footer class="rodape">
         <img src="./img/rodape.png" width="100px" style="padding-top: 20px; padding-left: 5px;">
-         <p class="copyrigth"> &copy; Todos os Direito reservados</p>
+         <p class="copyrigth"> &copy; copyrigth</p>
          
          
       </footer>   
