restilização da página home e inclusão da página localização

--- a/contatos.html
+++ b/contatos.html
@@ -3,20 +3,24 @@
 <html>
     <head>
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap" rel="stylesheet">
         <header>
-            <img style="border-radius: 20px;padding-bottom: 10px; padding-left: 10px; padding-top: 10px;" src="./img/home2.jpg.crdownload" alt="logo da loja" height="120px" width="100px">
+            <img style="border-radius: 20px;padding-bottom: 10px; padding-left: 10px; padding-top: 10px;" src="./img/home2.jpg" alt="logo da loja" height="120px" width="100px">
             
-            <nav style="position: absolute; top: 5%; left: 700px;">
+            <nav style="position: absolute; top: 10%; left: 700px;">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="produtos.html">Produtos</a></li>
                 <li><a href="contatos.html">Contatos</a></li>
-                <li><a href="quemsomos.html">Quem somos</a></li>
+                <li><a href="localizacao.html">Localização</a></li>
             </ul>
         </nav>
         </header>
 
     </head>
+<br>
+    <h1 style=" height: 70xp; text-align: center">Mande sua coruja</h1>
 <main>
     <!-- ESTRUTURA FORMULÁRIO - INÍCIO -->
     <form>
