--- a/contatos.html
+++ b/contatos.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width">
 <html>
     <head>
         <link rel="stylesheet" href="./css/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap" rel="stylesheet">
-        <header>
-            <img style="border-radius: 20px;padding-bottom: 10px; padding-left: 10px; padding-top: 10px;" src="./img/home2.jpg" alt="logo da loja" height="120px" width="100px">
-            
-            <nav style="position: absolute; top: 10%; left: 700px;">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contatos.html">Contatos</a></li>
-                <li><a href="localizacao.html">Localização</a></li>
-            </ul>
-        </nav>
-        </header>
+<header>
+    <img style="border-radius: 20px;padding-bottom: 10px; padding-left: 10px; padding-top: 10px;" src="./img/home2.jpg" height="120px" width="100px">
+    
+    <nav style="position: absolute; top: 10%; left: 600px;">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="produtos.html">Produtos</a></li>
+        <li><a href="contatos.html">Contatos</a></li>
+        <li><a href="localizacao.html">Localização</a></li>
+        <li><a href="memorian.html">In Memorian</a></li>
+    </ul>
+</nav>
+</header>
 
     </head>
 <br>
